--- a/premier_league.ipynb
+++ b/premier_league.ipynb
@@ -2,23 +2,25 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 34,
    "id": "c632abd5",
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "from sklearn.ensemble import RandomForestRegressor\n",
+    "from sklearn.tree import DecisionTreeRegressor\n",
     "from xgboost import XGBRegressor\n",
+    "from sklearn.model_selection import GridSearchCV,StratifiedKFold\n",
     "from sklearn.preprocessing import LabelEncoder\n",
-    "from sklearn.metrics import mean_squared_error, r2_score\n",
+    "from sklearn.metrics import mean_squared_error, r2_score,accuracy_score,classification_report\n",
     "from sklearn.model_selection import train_test_split\n",
     "import numpy as np"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 35,
    "id": "e06f9426",
    "metadata": {},
    "outputs": [
@@ -41,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 36,
    "id": "68529d74",
    "metadata": {},
    "outputs": [
@@ -68,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 37,
    "id": "493f6389",
    "metadata": {},
    "outputs": [],
@@ -89,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 38,
    "id": "641beb0e",
    "metadata": {},
    "outputs": [
@@ -122,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 39,
    "id": "7a04104a",
    "metadata": {},
    "outputs": [
@@ -148,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 40,
    "id": "d5827c91",
    "metadata": {},
    "outputs": [
@@ -186,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 41,
    "id": "2140c157",
    "metadata": {},
    "outputs": [
@@ -225,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 42,
    "id": "f06dc5bb",
    "metadata": {},
    "outputs": [
@@ -282,7 +284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 43,
    "id": "bfb4ce0f",
    "metadata": {},
    "outputs": [
@@ -317,7 +319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 44,
    "id": "199eed0d",
    "metadata": {},
    "outputs": [
@@ -367,7 +369,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 45,
    "id": "dbc9cb3c",
    "metadata": {},
    "outputs": [
@@ -424,7 +426,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 46,
    "id": "01c1a8dc",
    "metadata": {},
    "outputs": [
@@ -451,7 +453,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 47,
    "id": "352fd6ae",
    "metadata": {},
    "outputs": [
@@ -477,7 +479,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 48,
    "id": "5a87aa5d",
    "metadata": {},
    "outputs": [
@@ -503,9 +505,259 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "063abb21",
+   "metadata": {},
+   "source": [
+    "### Using Grid Search CV for best model and params"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "id": "771eae46",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model_params = {\n",
+    "    'decision_tree': {\n",
+    "        'model': DecisionTreeRegressor(),\n",
+    "        'params': {\n",
+    "            'max_depth': [5, 10, None],\n",
+    "            'criterion': ['squared_error', 'friedman_mse']\n",
+    "        }\n",
+    "    },\n",
+    "    'random_forest': {\n",
+    "        'model': RandomForestRegressor(),\n",
+    "        'params': {\n",
+    "            'n_estimators': [100, 200],\n",
+    "            'max_depth': [5, 10, None]\n",
+    "        }\n",
+    "    },\n",
+    "    'xgboost': {\n",
+    "        'model': XGBRegressor(objective='reg:squarederror'),\n",
+    "        'params': {\n",
+    "            'n_estimators': [100, 200],\n",
+    "            'max_depth': [3, 5, 10],\n",
+    "            'learning_rate': [0.01, 0.1, 0.2]\n",
+    "        }\n",
+    "    }\n",
+    "}\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "id": "cecfb6b6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Model Comparison:\n",
+      "           model  best_score                                        best_params\n",
+      "0  decision_tree   -1.115140     {'criterion': 'friedman_mse', 'max_depth': 10}\n",
+      "1  random_forest    0.078804             {'max_depth': 10, 'n_estimators': 100}\n",
+      "2        xgboost   -0.098351  {'learning_rate': 0.01, 'max_depth': 3, 'n_est...\n",
+      "\n",
+      "✅ Best Model Selected: RandomForestRegressor(max_depth=10)\n"
+     ]
+    }
+   ],
+   "source": [
+    "scores = []\n",
+    "best_model = None\n",
+    "best_score = -float(\"inf\")\n",
+    "\n",
+    "for model_name, mp in model_params.items():\n",
+    "    clf = GridSearchCV(mp['model'], mp['params'], cv=3, scoring='r2', return_train_score=False)\n",
+    "    clf.fit(X_train, y_train)   # y_train should be points/target values\n",
+    "    \n",
+    "    scores.append({\n",
+    "        'model': model_name,\n",
+    "        'best_score': clf.best_score_,\n",
+    "        'best_params': clf.best_params_\n",
+    "    })\n",
+    "    \n",
+    "    if clf.best_score_ > best_score:\n",
+    "        best_score = clf.best_score_\n",
+    "        best_model = clf.best_estimator_\n",
+    "\n",
+    "scores_df = pd.DataFrame(scores, columns=[\"model\", \"best_score\", \"best_params\"])\n",
+    "print(\"\\nModel Comparison:\")\n",
+    "print(scores_df)\n",
+    "\n",
+    "print(f\"\\n✅ Best Model Selected: {best_model}\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "id": "2119b4dc",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " PREDICTING 2025/26 SEASON\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\" PREDICTING 2025/26 SEASON\")\n",
+    "last_season = df[df[\"Season\"] == \"2024/25\"].copy()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "id": "4b100ae5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Encode teams (handle new teams that might not be in training data)\n",
+    "known_teams = set(le.classes_)\n",
+    "last_season_filtered = last_season[last_season[\"Team\"].isin(known_teams)].copy()\n",
+    "last_season_filtered[\"TeamCode\"] = le.transform(last_season_filtered[\"Team\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "id": "f90a7004",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Create same features as training\n",
+    "last_season_filtered[\"AttackRate\"] = last_season_filtered[\"GoalsFor\"] / last_season_filtered[\"Matches\"]\n",
+    "last_season_filtered[\"DefenseRate\"] = last_season_filtered[\"GoalsAgainst\"] / last_season_filtered[\"Matches\"]\n",
+    "last_season_filtered[\"PointsPerMatch\"] = last_season_filtered[\"Points\"] / last_season_filtered[\"Matches\"]\n",
+    "last_season_filtered[\"GoalRatio\"] = last_season_filtered[\"GoalsFor\"] / (last_season_filtered[\"GoalsAgainst\"] + 1)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "id": "0406b99f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_pred = last_season_filtered[features]\n",
+    "predictions = best_model.predict(X_pred)\n",
+    "last_season_filtered[\"PredictedPoints\"] = predictions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "id": "30b051d8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " PREDICTED PREMIER LEAGUE TABLE 2025/26 \n",
+      "-------------------------------------------------------\n",
+      "Pos  Team            Current  Predicted  Change  \n",
+      "-------------------------------------------------------\n",
+      "1    Liverpool       84       82.0       -2      \n",
+      "2    Man City        71       74.8       +4      \n",
+      "3    Arsenal         74       68.9       -5      \n",
+      "4    Newcastle       66       65.0       -1      \n",
+      "5    Chelsea         69       64.2       -5      \n",
+      "6    Nottingham      65       60.4       -5      \n",
+      "7    Aston Villa     66       59.3       -7      \n",
+      "8    Brighton Hove   61       57.0       -4      \n",
+      "9    Everton         48       53.0       +5      \n",
+      "10   Man United      42       52.4       +10     \n",
+      "11   West Ham        43       50.9       +8      \n",
+      "12   Crystal Palace  53       50.3       -3      \n",
+      "13   Tottenham       38       49.0       +11     \n",
+      "14   Fulham          54       48.2       -6      \n",
+      "15   Bournemouth     56       47.0       -9      \n",
+      "16   Brentford       56       45.6       -10     \n",
+      "17   Wolverhampton   42       41.1       -1      \n",
+      "18   Leicester City  25       14.7       -10     \n",
+      "19   Southampton     12       7.9        -4      \n"
+     ]
+    }
+   ],
+   "source": [
+    "results_1 = last_season_filtered.sort_values(\"PredictedPoints\", ascending=False)\n",
+    "\n",
+    "print(\" PREDICTED PREMIER LEAGUE TABLE 2025/26 \")\n",
+    "print(\"-\" * 55)\n",
+    "print(f\"{'Pos':<4} {'Team':<15} {'Current':<8} {'Predicted':<10} {'Change':<8}\")\n",
+    "print(\"-\" * 55)\n",
+    "for i, (_, row) in enumerate(results_1.iterrows(), 1):\n",
+    "    current_points = row[\"Points\"]\n",
+    "    predicted_points = row[\"PredictedPoints\"]\n",
+    "    change = predicted_points - current_points\n",
+    "    change_str = f\"{change:+.0f}\"\n",
+    "    print(f\"{i:<4} {row['Team']:<15} {current_points:<8.0f} {predicted_points:<10.1f} {change_str:<8}\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
+   "id": "6556c5d6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      " PREDICTED TOP 3 FOR 2025/26:\n",
+      "🥇 1. Liverpool       - 82.0 points\n",
+      "🥈 2. Man City        - 74.8 points\n",
+      "🥉 3. Arsenal         - 68.9 points\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Top 3 teams\n",
+    "print(f\"\\n PREDICTED TOP 3 FOR 2025/26:\")\n",
+    "top3 = results_1.head(3)\n",
+    "for i, (_, row) in enumerate(top3.iterrows(), 1):\n",
+    "    medal = \"🥇\" if i == 1 else \"🥈\" if i == 2 else \"🥉\"\n",
+    "    print(f\"{medal} {i}. {row['Team']:<15} - {row['PredictedPoints']:.1f} points\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "id": "b127eeac",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "  PREDICTED RELEGATION ZONE:\n",
+      "18. Southampton     - 7.9 points\n",
+      "19. Leicester City  - 14.7 points\n",
+      "20. Wolverhampton   - 41.1 points\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Bottom 3 teams (relegation zone)\n",
+    "print(f\"\\n  PREDICTED RELEGATION ZONE:\")\n",
+    "bottom3 = results_1.tail(3)\n",
+    "for i, (_, row) in enumerate(reversed(list(bottom3.iterrows())), 18):\n",
+    "    print(f\"{i}. {row['Team']:<15} - {row['PredictedPoints']:.1f} points\")"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "771eae46",
+   "id": "d19cae01",
    "metadata": {},
    "outputs": [],
    "source": []
